# hello-dxr-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: consts.rs  main.rs  shader.hlsl  transform.rs
