[package]
name = "hello-dxr-rs"
version = "0.1.0"
edition = "2024"

[dependencies.windows]
version = "0.61.1"
default-features = false
features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    # "Win32_Graphics_Direct3D_Fxc",
    # "Win32_Security",
    # "Win32_System_LibraryLoader",
    # "Win32_System_Threading",
    # "Win32_System_WindowsProgramming",
]
